Added my existing code

--- a/index.html
+++ b/index.html
@@ -1,1 +1,57 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>My Resume</title>
+    <link rel="stylesheet" href="Michelle.css">
+  </head>
+  <body>
+    <h1>My Resume</h1>
+    <h2>Michelle Yeung</h2>
+    <h5>Contact</h5>
+    <p>Email: michelleyeung42@yahoo.com</p>
+    <p>Cell: 415-699-6885</p>
+    <img src="dog.jpg" alt="dog picture" width="300px" height="200px">
+    <br>
+
+
+
+    <div class="">
+      <div class="left">
+        <h3>Skills</h3>
+        <ul>
+          <li>Google</li>
+          <li>Html</li>
+          <li>Cash handling</li>
+          <li>Customer service</li>
+        </ul>
+
+
+        <h3>Education</h3>
+        <ul>
+          <li>Dev Mission</li>
+          <li>Civic Center Secondary School</li>
+        </ul>
+      </div>
+      <div class="right">
+        <h3>Qualifications</h3>
+        <ul>
+          <li>Able to work in teams</li>
+          <li>Punctual</li>
+          <li>Communication</li>
+          <li>Organized</li>
+        </ul>
+        <h3>Experience</h3>
+        <ul>
+          <li>Dev Mission</li>
+          <li>Youth Outreach Worker</li>
+          <li>Student Member of Instructional Rounds</li>
+        </ul>
+      </div>
+    </div>
+
+
+
+  </body>
+</html>
 
