--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>My Resume</title>
-    <link rel="stylesheet" href="Michelle.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>My Resume</h1>
