--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <h1>My Resume</h1>
     <h2>Michelle Yeung</h2>
+    <img src="MichellePic.jpg" alt="A picture of me" width="200px" height="200px">
     <h5>Contact</h5>
     <p>Email: michelleyeung42@yahoo.com</p>
     <p>Cell: 415-699-6885</p>
