--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <h1>My Resume</h1>
     <h2>Michelle Yeung</h2>
     <img src="MichellePic.jpg" alt="A picture of me" width="200px" height="200px">
-    <h5>Contact</h5>
-    <p>Email: michelleyeung42@yahoo.com</p>
-    <p>Cell: 415-699-6885</p>
+    <h4>Contact</h4>
+    <p><b><font size="2">Email:</font></b><a href="mailto:michelleyeung42@yahoo.com">michelleyeung42@yahoo.com</a></p>
+    <p><b><font size="2">Cell:</font></b><a href="tel:1-415-699-6885">415-699-6885</a></p>
     <br>
 
 
