--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My Resume</title>
+    <title>Resume</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
