--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Resume</title>
+    <title>Michelle's Resume</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>My Resume</h1>
+    <h1>Résumé</h1>
     <h2>Michelle Yeung</h2>
     <img class="img-circle" src="MichellePic.jpg" alt="A picture of me" width="200px" height="200px">
     <h4>Contact</h4>
